# sshells

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  publish-to-winget.yml
src/: config.json  main.rs
