[package]
name = "sshells"
version = "0.1.5"
edition = "2024"
description = "Simple utility for picking OpenSSH shell on Windows after establishing SSH connection"
homepage = "https://github.com/dzonder/sshells"
repository = "https://github.com/dzonder/sshells"
readme = "README.md"
keywords = ["openssh", "shell", "windows"]
authors = ["Michal Olech <me@dzonder.net>"]
categories = ["ssh", "tools"]
license = "MIT"

[dependencies]
cursive = "0.21"
lazy_static = "1.5.0"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
